--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -4,7 +4,7 @@
     android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.fragmentejercicio2.MainFragment"
+    android:name="com.fernandoMarquezRodriguez.fragmentejercicio2.MainFragment"
     tools:context=".HostActivity">
 
 </androidx.fragment.app.FragmentContainerView>
